--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -15,12 +15,13 @@ rules:
   indent:
     - error
     - 4
+    - SwitchCase: 1
   linebreak-style:
     - error
     - unix
+  no-console: 0
   quotes:
     - error
-    - single
+    - double
   semi:
     - error
-    - never
