--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "reactapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/kausarb/react-demo-app/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "jest-cli": "^23.6.0",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
@@ -12,14 +14,26 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --colors",
-    "eject": "react-scripts eject"
+    "test": "jest --colors --coverage",
+    "eject": "react-scripts eject",
+	"lint": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "jest": {
+	"modulePathIgnorePatterns" : ["/node_modules/"],
+	"verbose" : true,
     "collectCoverage": true,
+	"notify": true,
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
-    ]
+      "../src/**/*.{js,jsx}"
+    ],
+	"coverageThreshold" : {
+	"global" : {
+	"branches" : 80,
+	"functions" : 80,
+	"lines" : 80,
+	"statements" : 80
+	}
+	}
   },
   "eslintConfig": {
     "extends": "react-app"
