bootstrap problem solved but coverage report problem not fixed

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "collectCoverage": true,
 	"notify": true,
     "collectCoverageFrom": [
-      "../src/**/*.{js,jsx}"
+       "../src/**/*.{js,jsx}",
+	   "!**/node_modules/**",
+	   "!**/vendor/**"
     ],
 	"coverageThreshold" : {
 	"global" : {
