--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -17,8 +17,9 @@ rules:
     - 4
     - SwitchCase: 1
   linebreak-style:
+    - 0
     - error
-    - unix
+    - windows
   no-console: 0
   quotes:
     - error
