--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "react-scripts": "2.1.3"
   },
   "scripts": {
-    "start": "set PORT=8000 && react-scripts start",
+    "start": "set PORT=8200 && react-scripts start",
     "build": "react-scripts build --out dir lib --ignore '**/__tests__/'",
-    "test": "jest",
+    "test": "jest --no-cache",
     "eject": "react-scripts eject",
-    "lint": "eslint -f html -o report/eslintReport.html --fix --ext .jsx --ignore-path .gitignore",
+    "lint": "eslint -f html -o report/eslintReport.html --ext .jsx,.js src",
     "coverage": "jest --verbose --coverage && open ./coverage/lcov-report/index.html"
   },
   "jest": {
@@ -27,8 +27,17 @@
     "clearMocks": true,
     "cacheDirectory": "./cache",
     "collectCoverage": true,
-    "testMatch": [
-      "**/*test.js"
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "**/*.{js,jsx}",
+      "!**/node_modules/**",
+      "**/__tests__/**"
+    ],
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(js|jsx)$",
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/lib",
+      "<rootDir>/src/__tests__/",
+      "<rootDir>/src/.*/__tests__/"
     ],
     "moduleFileExtensions": [
       "js",
@@ -36,19 +45,19 @@
       "json"
     ],
     "modulePathIgnorePatterns": [
+      "/lib/",
+      "/.npm/",
       "/node_modules/"
     ],
-    "verbose": true,
-    "notify": true,
+    "unmockedModulePathPatterns": [
+      "/node_modules"
+    ],
     "testPathIgnorePatterns": [
       "/node_modules/"
     ],
     "moduleNameMapper": {
       "\\.(scss)$": "<rootDir>/node_modules/jest-css-modules"
     },
-    "collectCoverageFrom": [
-      "<rootDir>/src/__tests__"
-    ],
     "coverageThreshold": {
       "global": {
         "branches": 80,
